# babydeer

./: .cursorrules  .gitignore  LICENSE  README.md  pyproject.toml
babydeer/: __init__.py
babydeer/architectures/: __init__.py
babydeer/architectures/toy/: __init__.py  torch_decoder_only.py
babydeer/assessment/: __init__.py  time_complexity.py
babydeer/visualization/: __init__.py  torchviz.py
examples/: analyze_smallllm_complexity.py  visualize_smallllm.py
examples/assessments/: complexity_vocab1000_dmodel128_nhead4_layers2_ffn512_dropout0_1_layernormTrue_softmaxFalse.json
examples/graphs/: torch_decoder_only_vocab1000_dmodel128_nhead4_layers2_ffn512_dropout0_1_layernormTrue_softmaxFalse
