[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babydeer"
version = "0.1.0"
description = "eff.ai monolith"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchviz",
    "graphviz",
    "torchinfo",
    "torchview",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["babydeer*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

